syntax = "proto3";

package proto;

service Receiver {
    rpc JoinServiceHub (ProviderInfo) returns (JoinResult) {
    }
    rpc ReportActive (ProviderInfo) returns (ReportResult) {
    }
}

service EndPoint {
    rpc GetServiceInfo(ProviderInfo) returns (ProviderInfo) {}
}

message ProviderInfo {
    string serviceName = 1;
    string ip = 2;
    string port = 3;
}

message JoinResult {
    bool result = 1;
}

message ReportResult {
    bool result = 1;
}
